--- a/REACT Assignment/assignment-8/src/App.css
+++ b/REACT Assignment/assignment-8/src/App.css
@@ -1,4 +1,3 @@
-/* Page background */
 
 body {
   margin: 0;
@@ -6,7 +5,7 @@ body {
   background: #f4f6f9;
 }
 
-/* Main center layout */
+
 
 .main {
   min-height: 100vh;
@@ -15,7 +14,7 @@ body {
   align-items: center;
 }
 
-/* Card container */
+
 
 .container {
   background: #ffffff;
@@ -26,13 +25,13 @@ body {
   text-align: center;
 }
 
-/* Titles */
+
 
 h2 {
   margin-bottom: 30px;
 }
 
-/* Image styling */
+
 
 .movieImage {
   width: 320px;
@@ -40,7 +39,7 @@ h2 {
   margin-bottom: 20px;
 }
 
-/* Buttons */
+
 
 .btn {
   padding: 12px 20px;
@@ -57,7 +56,7 @@ h2 {
   background: #217dbb;
 }
 
-/* Form */
+
 
 .form input {
   width: 300px;
@@ -68,12 +67,12 @@ h2 {
 
 .form {
   display: flex;
-  flex-direction: column;   /* ⭐ makes vertical layout */
+  flex-direction: column;   
   align-items: center;
-  gap: 15px;                /* space between inputs */
+  gap: 15px;                
 }
 
-/* Success page */
+
 
 .successBox {
   font-size: 18px;
